Solution lab-python-error-handling

--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -72,6 +72,151 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cd6ce21f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    \"\"\"\n",
+    "    Inicializa el inventario con las cantidades proporcionadas por el usuario.\n",
+    "    Maneja entradas no válidas pidiendo al usuario que ingrese cantidades válidas.\n",
+    "    \"\"\"\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_quantity = False\n",
+    "        while not valid_quantity:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity < 0:\n",
+    "                    raise ValueError(\"Invalid quantity! Please enter a non-negative value.\")\n",
+    "                valid_quantity = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "        inventory[product] = quantity\n",
+    "    return inventory\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c55bbef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_product_prices(products):\n",
+    "    \"\"\"\n",
+    "    Solicita al usuario que ingrese el precio para cada producto.\n",
+    "    Maneja entradas no válidas pidiendo al usuario que ingrese un precio válido.\n",
+    "    \"\"\"\n",
+    "    prices = {}\n",
+    "    for product in products:\n",
+    "        valid_price = False\n",
+    "        while not valid_price:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price of the {product}: \"))\n",
+    "                if price < 0:\n",
+    "                    raise ValueError(\"Invalid price! Please enter a non-negative value.\")\n",
+    "                valid_price = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "        prices[product] = price\n",
+    "    return prices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d2608d62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_customer_orders(inventory, prices):\n",
+    "    \"\"\"\n",
+    "    Solicita al usuario que ingrese pedidos de productos.\n",
+    "    Maneja entradas no válidas y verifica la disponibilidad del producto.\n",
+    "    \"\"\"\n",
+    "    orders = {}\n",
+    "    while True:\n",
+    "        valid_num_orders = False\n",
+    "        while not valid_num_orders:\n",
+    "            try:\n",
+    "                num_orders = int(input(\"Enter the number of different products to order: \"))\n",
+    "                if num_orders < 0:\n",
+    "                    raise ValueError(\"Number of orders cannot be negative. Please enter a valid number.\")\n",
+    "                valid_num_orders = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "\n",
+    "        for _ in range(num_orders):\n",
+    "            valid_product = False\n",
+    "            while not valid_product:\n",
+    "                try:\n",
+    "                    product = input(\"Enter the product name: \").strip().lower()\n",
+    "                    if product not in inventory:\n",
+    "                        raise ValueError(f\"Product '{product}' is not in the inventory.\")\n",
+    "                    \n",
+    "                    valid_quantity = False\n",
+    "                    while not valid_quantity:\n",
+    "                        try:\n",
+    "                            quantity = int(input(f\"Enter the quantity for {product}: \"))\n",
+    "                            if quantity < 0:\n",
+    "                                raise ValueError(\"Quantity cannot be negative. Please enter a valid quantity.\")\n",
+    "                            if quantity > inventory[product]:\n",
+    "                                raise ValueError(f\"Not enough stock for {product}. Available: {inventory[product]}.\")\n",
+    "                            valid_quantity = True\n",
+    "                        except ValueError as error:\n",
+    "                            print(f\"Error: {error}\")\n",
+    "\n",
+    "                    # Actualizar el inventario\n",
+    "                    inventory[product] -= quantity\n",
+    "                    orders[product] = orders.get(product, 0) + quantity\n",
+    "                    valid_product = True\n",
+    "                \n",
+    "                except ValueError as error:\n",
+    "                    print(f\"Error: {error}\")\n",
+    "\n",
+    "        return orders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d6ca7a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customer orders: {'mug': 2, 'hat': 1, 'book': 3}\n",
+      "Updated inventory: {'t-shirt': 5, 'mug': 8, 'hat': 1, 'book': 9, 'keychain': 3}\n",
+      "Product prices: {'t-shirt': 1.0, 'mug': 2.0, 'hat': 3.0, 'book': 4.0, 'keychain': 5.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    \"\"\"\n",
+    "    Función principal para ejecutar el programa. Inicializa el inventario, obtiene los precios,\n",
+    "    y obtiene los pedidos del cliente.\n",
+    "    \"\"\"\n",
+    "    products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]  # Lista de productos fija\n",
+    "    inventory = initialize_inventory(products)\n",
+    "    \n",
+    "    prices = get_product_prices(products)\n",
+    "    \n",
+    "    orders = get_customer_orders(inventory, prices)\n",
+    "    print(\"Customer orders:\", orders)\n",
+    "    print(\"Updated inventory:\", inventory)\n",
+    "    print(\"Product prices:\", prices)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
@@ -90,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
