Solution lab-python-error-handling

--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -75,16 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "cd6ce21f",
+   "execution_count": 25,
+   "id": "fca8bcfd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def initialize_inventory(products):\n",
-    "    \"\"\"\n",
-    "    Inicializa el inventario con las cantidades proporcionadas por el usuario.\n",
-    "    Maneja entradas no válidas pidiendo al usuario que ingrese cantidades válidas.\n",
-    "    \"\"\"\n",
     "    inventory = {}\n",
     "    for product in products:\n",
     "        valid_quantity = False\n",
@@ -102,16 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c55bbef5",
+   "execution_count": 26,
+   "id": "c7cfc46f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_product_prices(products):\n",
-    "    \"\"\"\n",
-    "    Solicita al usuario que ingrese el precio para cada producto.\n",
-    "    Maneja entradas no válidas pidiendo al usuario que ingrese un precio válido.\n",
-    "    \"\"\"\n",
     "    prices = {}\n",
     "    for product in products:\n",
     "        valid_price = False\n",
@@ -129,16 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d2608d62",
+   "execution_count": 27,
+   "id": "24398a6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_customer_orders(inventory, prices):\n",
-    "    \"\"\"\n",
-    "    Solicita al usuario que ingrese pedidos de productos.\n",
-    "    Maneja entradas no válidas y verifica la disponibilidad del producto.\n",
-    "    \"\"\"\n",
     "    orders = {}\n",
     "    while True:\n",
     "        valid_num_orders = False\n",
@@ -171,7 +159,6 @@
     "                        except ValueError as error:\n",
     "                            print(f\"Error: {error}\")\n",
     "\n",
-    "                    # Actualizar el inventario\n",
     "                    inventory[product] -= quantity\n",
     "                    orders[product] = orders.get(product, 0) + quantity\n",
     "                    valid_product = True\n",
@@ -184,35 +171,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d6ca7a67",
+   "execution_count": 28,
+   "id": "3b15e017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_total_price(orders, prices):  # Asegúrate de tener los parámetros 'orders' y 'prices'\n",
+    "    total_price = 0.0\n",
+    "    \n",
+    "    for product, quantity in orders.items():\n",
+    "        valid_price = False\n",
+    "        while not valid_price:\n",
+    "            try:\n",
+    "                price = prices[product]\n",
+    "                if price < 0:\n",
+    "                    raise ValueError(f\"The price of {product} cannot be negative. Please check the price.\")\n",
+    "                total_price += quantity * price\n",
+    "                valid_price = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "                # Re-prompt the user to enter a valid price\n",
+    "                try:\n",
+    "                    new_price = float(input(f\"Enter a valid price for {product}: \"))\n",
+    "                    prices[product] = new_price\n",
+    "                except ValueError:\n",
+    "                    print(\"Invalid input. Please enter a valid numeric value for the price.\")\n",
+    "    \n",
+    "    return total_price\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "4047a347",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Customer orders: {'mug': 2, 'hat': 1, 'book': 3}\n",
-      "Updated inventory: {'t-shirt': 5, 'mug': 8, 'hat': 1, 'book': 9, 'keychain': 3}\n",
-      "Product prices: {'t-shirt': 1.0, 'mug': 2.0, 'hat': 3.0, 'book': 4.0, 'keychain': 5.0}\n"
+      "Error: invalid literal for int() with base 10: 'five'\n",
+      "Error: Invalid quantity! Please enter a non-negative value.\n",
+      "Error: Not enough stock for mug. Available: 3.\n",
+      "Customer orders: {'hat': 10, 'mug': 3, 'book': 1}\n",
+      "Updated inventory: {'t-shirt': 5, 'mug': 0, 'hat': 0, 'book': 14, 'keychain': 1}\n",
+      "Product prices: {'t-shirt': 1.0, 'mug': 2.0, 'hat': 3.0, 'book': 4.0, 'keychain': 5.0}\n",
+      "Total price of the order: $40.00\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
-    "    \"\"\"\n",
-    "    Función principal para ejecutar el programa. Inicializa el inventario, obtiene los precios,\n",
-    "    y obtiene los pedidos del cliente.\n",
-    "    \"\"\"\n",
-    "    products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]  # Lista de productos fija\n",
+    "    products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
     "    inventory = initialize_inventory(products)\n",
     "    \n",
     "    prices = get_product_prices(products)\n",
     "    \n",
     "    orders = get_customer_orders(inventory, prices)\n",
+    "    \n",
+    "    total_price = calculate_total_price(orders, prices)  # Asegúrate de que esta línea coincida con la definición de la función\n",
+    "    \n",
     "    print(\"Customer orders:\", orders)\n",
     "    print(\"Updated inventory:\", inventory)\n",
     "    print(\"Product prices:\", prices)\n",
+    "    print(f\"Total price of the order: ${total_price:.2f}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
